// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow renders with new posts 1`] = `
<li>
  <Link
    data-styleName="s.communityRow"
    replace={false}
    title="Barmunity"
    to="/c/bar"
  >
    <div
      data-styleName="s.avatar"
      style={
        Object {
          "backgroundImage": "url(/bar.png)",
        }
      }
    />
    <span
      data-styleName="s.community-name s.highlight"
    >
      Barmunity
    </span>
    <Badge
      number={7}
    />
  </Link>
</li>
`;

exports[`CommunityRow renders with zero new posts 1`] = `
<li>
  <Link
    data-styleName="s.communityRow"
    replace={false}
    title="Foomunity"
    to="/c/foo"
  >
    <div
      data-styleName="s.avatar"
      style={
        Object {
          "backgroundImage": "url(/foo.png)",
        }
      }
    />
    <span
      data-styleName="s.community-name"
    >
      Foomunity
    </span>
  </Link>
</li>
`;

exports[`Drawer renders with a current community 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo
    community={
      Object {
        "avatarUrl": "/foo.png",
        "id": "11",
        "name": "Foomunity",
        "slug": "foo",
      }
    }
  />
  <ul
    data-styleName="s.communitiesList"
  >
    <li>
      <Link
        data-styleName="s.allCommunities"
        replace={false}
        to="/all"
      >
        <AllFeedsIcon />
        <span
          className="drawer-inv-lg"
          data-styleName="s.allCommunitiesText"
        >
          All Communities
        </span>
      </Link>
    </li>
  </ul>
  <Button
    data-styleName="s.newCommunity"
    label={<NewCommunity />}
  />
</div>
`;

exports[`Drawer renders without a current community 1`] = `
<div
  data-styleName="s.communityDrawer"
>
  <Icon
    data-styleName="s.closeDrawer"
    name="Ex"
  />
  <Logo />
  <ul
    data-styleName="s.communitiesList"
  >
    <li>
      <Link
        data-styleName="s.allCommunities"
        replace={false}
        to="/all"
      >
        <AllFeedsIcon />
        <span
          className="drawer-inv-lg"
          data-styleName="s.allCommunitiesText"
        >
          All Communities
        </span>
      </Link>
    </li>
  </ul>
  <Button
    data-styleName="s.newCommunity"
    label={<NewCommunity />}
  />
</div>
`;
